fixed bugs on mobile(http to https)

--- a/src/App.css
+++ b/src/App.css
@@ -162,6 +162,24 @@ body {
   padding-left: 2.4rem;
 }
 
+.submit-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-style: none;
+  background: transparent;
+  width: 5rem;
+  height: 6rem;
+  border-bottom-right-radius: 10px;
+  background-color: rgba(56, 56, 113, 0.833);
+  z-index: 100;
+  transition: transform 0.1s ease;
+}
+
+.submit-btn:active {
+  transform: scale(0.95);
+}
+
 .homepage-title-container {
   margin: 0 auto;
   /* background-color: rgb(129, 34, 34); */
